--- a/Module1/array/thucHanh/timGiaTriLonNhatTrongMang/timGiaTriLonNhatTrongMax.html
+++ b/Module1/array/thucHanh/timGiaTriLonNhatTrongMang/timGiaTriLonNhatTrongMax.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let numbers = [-3, 5, 1, 3, 2, 10];
+    let numbers = [];
     let max = numbers[0]; // gán giá trị lớn nhất  mặc đinh là phần tử đầu tiên của mảng
     let index = 0;
     for (let i = 1; i < numbers.length; i++)  { // duyệt mảng
