--- a/module3/Bài 7. Thiết kế bố cục trang web/Bài tập/tao_giao_dien_gian_luoc_cua_trang_chu_facebook.html
+++ b/module3/Bài 7. Thiết kế bố cục trang web/Bài tập/tao_giao_dien_gian_luoc_cua_trang_chu_facebook.html
@@ -237,7 +237,7 @@
         margin-left: -47px;
         margin-bottom: 20px;
     }
-    /*End Mid*/</style>
+    </style>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
           integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="index_css.css">
@@ -377,7 +377,6 @@
                 </div>
                 <div class="content">
                     <div class="col-12">
-
 
                     </div>
                 </div>
