--- a/module3/bai6_css/dinh_dang_van_ban_voi_css/dinh_dang_van_ban.html
+++ b/module3/bai6_css/dinh_dang_van_ban_voi_css/dinh_dang_van_ban.html
@@ -5,7 +5,6 @@
     <title>Định dạng văn bản</title>
 
     <link rel="stylesheet" type="text/css" href="indent.css">
-    <link rel="stylesheet" type="text/css" href="viet_nam.css">
     <style>
         .blue{
             color: blue;
@@ -15,7 +14,7 @@
 </head>
 <body>
 <p>
-    <strong>Việt Nam</strong> (tên chính thức: <strong>Cộng hòa xã hội chủ nghĩa Việt Nam</strong> là một quốc gia nằm
+    <b>Việt Nam</b> (tên chính thức: <strong>Cộng hòa xã hội chủ nghĩa Việt Nam</strong> là một quốc gia nằm
     <br> ở phía đông, ở giữa Lào và Campuchia, thuộc
     <a href="https://vi.wikipedia.org/wiki/B%C3%A1n_%C4%91%E1%BA%A3o_%C4%90%C3%B4ng_D%C6%B0%C6%A1ng" title="bán đảo Đông Dương">bán đảo Đông Dương</a>,
     thuộc khu vực <span class="blue">Đông Nam <br> Á</span> thuộc Châu Á.
@@ -24,7 +23,7 @@
      Phía Bắc Việt Nam giáp với <span class="blue">Trung Quốc</span>, phía tây Việt Nam giáp với
     <span class="blue">Lào</span> và <span class="blue">Campuchia</span>, <br> phía tây nam giáp <span class="blue">
     vịnh Thái Lan</span>, phía đông và phía nam giáp <span class="blue">biển Đông</span> và có hơn 4000 hòn <br> đảo,
-    [6]bãi đá ngầm lớn nhỏ, gần và xa bờ, có vùng nội thủy, lãnh hải, vùng đặc quyền kinh tế và <br> thềm lục địa được
+    <sup>[6]</sup>  bãi đá ngầm lớn nhỏ, gần và xa bờ, có vùng nội thủy, lãnh hải, vùng đặc quyền kinh tế và <br> thềm lục địa được
     <span class="blue"> Chính phủ Việt Nam</span> xác định gần gấp ba lần diện tích đất liền(khoảng trên 1 <br> triệu km2).
     Trên biển đông có quần đảo <span class="blue">Trường Sa</span> và <span class="blue">Hoàng Sa</span> được Việt Nam
     tuyên bố chủ <br> <span style="word-spacing: 12px">quyền nhưng đang trong vòng tranh chấp với các quốc gia </span> <span class="blue"> Đài  Loan,
