--- a/module3/bai6_css/tao_trang_truyen_doc_ngan/trang_truyen_doc_ngan.html
+++ b/module3/bai6_css/tao_trang_truyen_doc_ngan/trang_truyen_doc_ngan.html
@@ -2,34 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Truyện cười AZ</title>
+    <title>Đọc truyện online</title>
+    <style>
+        .main_header{
+            background-color: blue;
+            height: 250px;
+            width: 150px;
+            display: inline-block;
+        }
+        a{
+            text-decoration: none;
+        }
+        .theloai{
+            background-color: red;
+            height: 250px;
+            width: 100px;
+            margin: 12px;
+            display: inline-block;
+        }
+
+    </style>
 </head>
 <body>
-<h1 style="color: blue">Cướp ngân hàng</h1>
-<img src="cuop.jpg" alt="Cướp ngân hàng" width="720" height="360">
-<p>Trong một vụ cướp <a href="https://vi.wikipedia.org/wiki/Ng%C3%A2n_h%C3%A0ng">Ngân hàng</a>, tên cướp hét lên:</p>
-<p>– Tất cả đứng im, hãy nhớ rằng tiền là của <a href="https://vi.wikipedia.org/wiki/Nh%C3%A0_n%C6%B0%E1%BB%9Bc">Nhà nước</a>,
-    còn mạng sống là của các người.</p>
-<p>Tất cả mọi người có mặt trong ngân hàng thấy có lý nên đều cúi đầu im lặng nằm xuống. Khi cho <br>
-    tiền đầy một cái túi lớn, một tên cướp trẻ hỏi tên cướp già:</p>
-<p>– Đại ca, chúng ta có cần đếm số tiền cướp được là bao nhiêu không?. </p>
-<p>Tên cướp già gằn giọng:</p>
-<p>– Mày ngu lắm, nhiều tiền thế, làm sao mà đếm được? Đợi đi, tối nay trên tivi sẽ nói chúng ta cướp được,<br>
-    bao nhiêu tiền!</p>
-<p>– Dạ, đại ca kinh nghiệm quá!</p>
-<p>Sau khi những tên cướp tẩu thoát, giám đốc ngân hàng đang định gọi báo cảnh sát. Kế toán trưởng liền chạy đến, nói
-    <br>nhỏ vào tai ông giám đốc:</p>
-<p>– Sếp hãy khai số tiền bị mất lớn hơn 100 tỷ để bù vào số tiền chúng ta đã biển thủ.</p>
-<p>Giám đốc ngân hàng gật gù:</p>
-<p>– Anh quả là tuổi trẻ tài cao! Nếu mỗi tháng có một vụ cướp thì thật là hay quá! Cứ thế mà làm.</p>
-<p>Ngày hôm sau, Tivi đưa tin: “Hơn 100 tỷ đã bị cướp khỏi ngân hàng…”</p>
-<p>Những tên cướp đếm đi đếm lại thì chỉ có gần 20 tỷ. Chúng rất tức tối:</p>
-<p>– Chúng ta mạo hiểm mạng sống của mình chỉ để lấy được 20 tỷ, bọn chó đó chỉ ngồi chơi mà cướp được 80 tỷ.
-    <br>Đúng là có học thì chúng nó được ngồi cái ghế đấy, cướp tiền thông minh hơn chúng ta!</p>
-<p>Tên cầm đầu đế vô:</p>
-<p>– Nó lấy của Nhà Nước thì cũng lấy vừa vừa thôi, đằng này nó lấy nhiều quá, làm con vợ tao cứ truy tao mãi,<br>
-    giải thích thế nào nó cũng không nghe, nghi tao cho bồ, thế có điên không!</p>
-<p style="color: red">Nguồn: sưu tầm</p>
+<header>
+    <div>
 
+        <div class="main_header">
+            <img src="book.png" alt="icon web truyện" width="30" height="30">
+            <a href="https://dtruyen.com/" title="Đọc truyện online" style="color:white">Đọc truyện online</a>
+        </div>
+        <div class="theloai">
+            <img src="key.jpg" alt="icon thể loại" width="20" height="20">
+            <a href="https://dtruyen.com/huyen-huyen/#" title="Thể loại">Thể loại</a>
+            <a href="https://dtruyen.com/ngon-tinh/" title="Ngôn tình">Ngôn tình</a>
+            <a href="https://dtruyen.com/truyen-cuoi/" title="Cười">Truyện cười</a>
+            <a href="https://dtruyen.com/tieu-thuyet/" title="Tiểu thuyết">Tiểu thuyết</a>
+        </div>
+    </div>
+</header>
+<h1>
+    <img src="cinema.jpg" alt="Cinema">
+</h1>
 </body>
 </html>
